Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-21733

Native symbian input dialog doesn't restore focus

    XMLWordPrintable

Details

    • 6b716b286095a6810aa8318b68c5df32f06bc710

    Description

      Focus is not restored to Qt input field when CAknQueryDialog with split screen input is launched and closed.

      Seems that QSymbianControl doesn't accept focus since there is S60->splitViewLastWidget, even if slitview was not ment for Qt widgets.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            e0348803 Miikka Heikkinen
            techn Jari Helaakoski
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes